namespace ClearEyeQ.Monitoring.Domain.Enums;

public enum MetricType
{
    HeartRate,
    HeartRateVariability,
    SpO2,
    Steps,
    SleepDuration
}
