namespace ClearEyeQ.Monitoring.Domain.Enums;

public enum WearableSource
{
    AppleHealth,
    GoogleFit,
    Oura,
    Whoop
}
